# iot-notebook

./: .gitignore  INSTALLATION.md  LICENSE  README.md  environment.yml  install.json  package-lock.json  package.json  pyproject.toml  setup.py
arduino/: kernel.json
arduino_kernel/: setup.py
arduino_kernel/arduino_kernel/: __init__.py  install.py  kernel.py
iot-notebook/labextension/: package.json
iot-notebook/labextension/static/: 549.f74df2fbcf477b4bc360.js  618.dea507411f3008cc0cc2.js  834.36489ab2ca41a13e422b.js  remoteEntry.339c987fc989b06f6890.js  style.js
kernel/: setup.py
kernel/arduino_kernel/: install.py  kernel.py
src/: index.ts  index.tsx  iot-notebook-cell.tsx  iot-notebook-factory.tsx  iot-notebook-sidebar.tsx  iot-notebook-toolbar.tsx  opentabs.ts
style/: base.css  index.css  iotcell.css  iotsidebar.css  iottoolbar.css
